--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ EOF
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist
-
+// trigger deploy
   deploy:
     needs: build
     runs-on: ubuntu-latest
