--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # Add any build-time environment variables here
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          # Production backend URL (add this as a GitHub Secret)
+          VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://your-backend-url.railway.app' }}
 
       - name: SPA fallback (index -> 404)
         run: cp dist/index.html dist/404.html
