--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "npm run clean && vite build",
     "clean": "rm -rf dist .vite",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "cd server && npm start",
+    "server": "cd server && npm run dev"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
