--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm run build
         env:
           # Production backend URL (add this as a GitHub Secret)
-          VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://your-backend-url.railway.app' }}
+          VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://lumx-ai-backend-production.up.railway.app' }}
 
       - name: SPA fallback (index -> 404)
         run: cp dist/index.html dist/404.html
