--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf dist .vite",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "cd server && npm start",
+    "start": "node server.js",
     "server": "cd server && npm run dev"
   },
   "dependencies": {
@@ -17,7 +17,12 @@
     "@vapi-ai/web": "^2.3.10",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "openai": "^4.56.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
